changed in label

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               type="file"
               name="upload"
               id="uploaded"
-              onchange="onFileUpload(this.value)"
+              onchange="onFileUpload(this.value);"
             />
           </label>
         </div>
@@ -160,7 +160,7 @@
           <div id="uploadDoc1">
             <p></p>
             <label
-              for="uploaded"
+              for="uploaded1"
               id="uploadButton1"
               class="btn fileUpload btn-default"
             >
@@ -169,7 +169,7 @@
                 type="file"
                 name="upload"
                 id="uploaded1"
-                onchange="onFileUpload1(this.value)"
+                onchange="onFileUpload1(this.value);"
               />
             </label>
           </div>
