Spell Check and path

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/src/index.css" />
   </head>
   <body>
     <header>
@@ -46,7 +46,7 @@
             Biometric residency permit[UK;Current]
           </option>
           <option value="Driving License">
-            Driving License photocard[Current; full of provisional; UK, Isle of
+            Driving License photoCard[Current; full of provisional; UK, Isle of
             Man or channel Island]
           </option>
           <option value="birth certificate">
@@ -96,7 +96,7 @@
               Biometric residency permit[UK;Current]
             </option>
             <option value="driving license">
-              Driving License photocard[Current; full of provisional; UK, Isle
+              Driving License photoCard[Current; full of provisional; UK, Isle
               of Man or channel Island]
             </option>
             <option value="birth certificate">
@@ -106,7 +106,7 @@
               Adoption Certificate[UK]
             </option>
             <option value="current driving license">
-              Current Driving License photocard(full or provisional)
+              Current Driving License photoCard(full or provisional)
             </option>
             <option value="current driving license paper ">
               Current driving license paper version (full or provisional)
@@ -177,6 +177,6 @@
       </section>
     </section>
 
-    <script src="/index.js" type="text/javascript"></script>
+    <script src="/src/index.js" type="text/javascript"></script>
   </body>
 </html>
