--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/src/index.css" />
+    <link rel="stylesheet" href="/src/main.css" />
   </head>
   <body>
     <header>
@@ -177,6 +178,6 @@
       </section>
     </section>
 
-    <script src="/src/index.js" type="text/javascript"></script>
+    <script src="/src/main.js" type="text/javascript"></script>
   </body>
 </html>
