--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/src/main.css" />
+    <title>Document Collection</title>
+    <link rel="stylesheet" href="./src/main.css" />
   </head>
   <body>
     <header>
@@ -164,8 +164,7 @@
               for="uploaded1"
               id="uploadButton1"
               class="btn fileUpload btn-default"
-            >
-              Upload
+              >Upload
               <input
                 type="file"
                 name="upload"
@@ -177,7 +176,6 @@
         </div>
       </section>
     </section>
-
-    <script src="/src/main.js" type="text/javascript"></script>
+    <script type="text/javascript" src="./src/main.js"></script>
   </body>
 </html>
