Modified file names

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document Collection</title>
-    <link rel="stylesheet" href="./src/main.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
@@ -176,6 +176,6 @@
         </div>
       </section>
     </section>
-    <script type="text/javascript" src="./src/main.js"></script>
+    <script type="text/javascript" src="/document.js"></script>
   </body>
 </html>
