--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document Collection</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
       <h3>Dynamic Document Collection</h3>
     </header>
+
     <section class="container">
       <div class="nationality">
         <label style="margin-right: 6.5em">Nationality</label>
 
         <label for="UK" style="margin-right: 2em">
-          <input type="radio" id="UK" name="selector" onclick="onLoad();" />
+          <input
+            type="radio"
+            id="UK"
+            value="UK"
+            name="selector"
+            onclick="onRadioUk();"
+          />
           UK
         </label>
         <label for="NonUK">
           <input type="radio" id="NonUK" name="selector" onclick="onLoad2();" />
           Non UK
         </label>
+      </div>
+
+      <div>
+        <button id="onBtn" class="btnStyle hide" onclick="onLoad();">
+          submit
+        </button>
       </div>
 
       <section id="selectOption" class="hide">
@@ -176,6 +189,8 @@
         </div>
       </section>
     </section>
-    <script type="text/javascript" src="/document.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="./document.js"></script>
   </body>
 </html>
